2008-06-03  Jürg Billeter  <j@bitron.ch>

	* doc/vala/classes.xml:

	Document signal syntax, based on patch by Phil Housley

2008-06-03  Jürg Billeter  <j@bitron.ch>

	* doc/vala/classes.xml:

	Document property syntax, based on patch by Phil Housley

2008-06-03  Jürg Billeter  <j@bitron.ch>

	* doc/vala/enums.xml:

	Document enum syntax, based on patch by Phil Housley

2008-06-03  Jürg Billeter  <j@bitron.ch>

	* doc/vala/methods.xml:

	Document method syntax, based on patch by Phil Housley

2008-06-03  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-base-0.10/:

	Fix gst_adapter_take_buffer and gst_collect_pads_take_buffer
	bindings, add gst_base_sink_wait_clock binding, patch by Ali Sabil

	* vapi/gstreamer-base-0.10.vapi: regenerated

2008-06-03  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gtk+-2.0/:

	Various fixes, patch by Phil Housley

	* vapi/gtk+-2.0.vapi: regenerated

2008-06-03  Jürg Billeter  <j@bitron.ch>

	* vapi/tiff.vapi: various fixes, patch by Christian Meyer

2008-06-03  Jürg Billeter  <j@bitron.ch>

	* vapi/Makefile.am: distribute and install libepc-1.0.vapi

2008-06-02  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodeclassbinding.vala:

	Fix invalid C code when using deprecated static classes

2008-06-02  Jürg Billeter  <j@bitron.ch>

	* vapi/packages/gstreamer-0.10/:

	Fix gst_bus_add_watch_full binding

	* vapi/gstreamer-0.10.vapi: regenerated

2008-06-02  Jürg Billeter  <j@bitron.ch>

	* gobject/valaccodegenerator.vala:
	* gobject/valaccodeinvocationexpressionbinding.vala:
	* gobject/valaccodemethodbinding.vala:

	Add basic support for owned delegates, fixes bug 533484

2008-06-02  Jürg Billeter  <j@bitron.ch>

	* vapi/gmodule-2.0.vapi:
	* vapi/sdl-gfx.vapi:
	* vapi/sdl-mixer.vapi:
	* vapi/sdl-ttf.vapi:
	* vapi/sdl.vapi:

	Use [Compact] attribute, patch by Phil Housley

2008-06-02  Jürg Billeter  <j@bitron.ch>

	* vapi/glib-2.0.vapi:

	Fix g_hash_table_foreach binding

2008-06-02  Jürg Billeter  <j@bitron.ch>
