@@ -3,7 +3,11 @@
 	<h>Delegates</h>
 	<section id="declaration">
 		<h>Delegate declarations</h>
-		<p>Documentation</p>
+		<p>A delegate represents a callback supplied by the programmer.</p>
+		<blockquote>
+delegate-declaration:
+	[ access-modifier ] <l>delegate</l> return-type qualified-identifier <l>(</l> parameter-list <l>)</l> <l>;</l>
+		</blockquote>
 	</section>
 </section>
 
